# SPDX-FileCopyrightText: 2024 Robin Vobruba <hoijui.quaero@gmail.com>
#
# SPDX-License-Identifier: Unlicense

[package]
name = "ontprox"
version = "0.1.0"
license = "AGPL-3.0-or-later"
authors = ["Robin Vobruba <hoijui.quaero@gmail.com>"]
description = """
    A tiny HTTP service that allows to fetch an RDF ontology
    in a variety of different formats
    (e.g. RDF/XML, JSON-LD, Turtle, ...),
    as long as it is available in one of them.
    """
repository = "https://codeberg.org/elevont/ontprox"
homepage = "https://codeberg.org/elevont/ontprox"
publish = false
keywords = ["cli", "rdf", "web-service", "conversion", "ontology"]
categories = ["caching", "command-line-utilities", "web-programming::http-server"]
readme = "README.md"
edition = "2021"

[lints.rust]
rust_2021_compatibility = "warn"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
wildcard_enum_match_arm = "warn"
string_slice = "warn"
indexing_slicing = "warn"
clone_on_ref_ptr = "warn"
try_err = "warn"
shadow_reuse = "allow"
empty_structs_with_brackets = "warn"
else_if_without_else = "warn"
use_debug = "warn"
print_stdout = "warn"
print_stderr = "warn"
#default_trait_access = "allow"
option_if_let_else = "allow"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
axum-extra = { version = "0.9" }
clap = { version = "4.4", features = ["cargo", "derive", "string"] }
cli_utils = { version = "0.7", package = "cli_utils_hoijui" }
const_format = "0.2"
dirs = "5.0"
futures = "0.3"
git-version = "0.3"
mediatype = "0.19"
once_cell = "1.19"
openssl = { version = "=0.10.64", features = ["vendored"] }
rdfoothills = { path = "../rdfoothills" }
regex = "1.10"
reqwest = "0.12"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1.28", features = ["rt-multi-thread"] }
tokio-util = { version = "0.7", features = ["io"] }
tower-http = { version = "0.5.0", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5"
